--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWK0nau368AQMvih+7M5yO",
+      "authorship_tag": "ABX9TyMY30YZoDaXWfSx1FMFWXme",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +92,151 @@
             "\n",
             "nothing to commit, working tree clean\n",
             "fatal: could not read Username for 'https://github.com': No such device or address\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git status\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3YJJlbXUX2lR",
+        "outputId": "c2d8eb0e-5e12-4526-9c48-bb2b2ab93946"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch main\n",
+            "Your branch is up to date with 'origin/main'.\n",
+            "\n",
+            "nothing to commit, working tree clean\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pwd\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tHTcZHlcX5YS",
+        "outputId": "d679d509-3a31-4ef3-b9b1-bade60996be0"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/Price-Prediction-DL\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git init https://github.com/risnariha/Price-Prediction-DL.git\n",
+        "!git remote add origin\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QloNsBIjYJDY",
+        "outputId": "aa1b9e5a-c7d0-465f-8c71-4452e56b5dc0"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33mhint: Using 'master' as the name for the initial branch. This default branch name\u001b[m\n",
+            "\u001b[33mhint: is subject to change. To configure the initial branch name to use in all\u001b[m\n",
+            "\u001b[33mhint: of your new repositories, which will suppress this warning, call:\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: \tgit config --global init.defaultBranch <name>\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: Names commonly chosen instead of 'master' are 'main', 'trunk' and\u001b[m\n",
+            "\u001b[33mhint: 'development'. The just-created branch can be renamed via this command:\u001b[m\n",
+            "\u001b[33mhint: \u001b[m\n",
+            "\u001b[33mhint: \tgit branch -m <name>\u001b[m\n",
+            "Initialized empty Git repository in /content/Price-Prediction-DL/https:/github.com/risnariha/Price-Prediction-DL.git/.git/\n",
+            "usage: git remote add [<options>] <name> <url>\n",
+            "\n",
+            "    -f, --fetch           fetch the remote branches\n",
+            "    --tags                import all tags and associated objects when fetching\n",
+            "                          or do not fetch any tag at all (--no-tags)\n",
+            "    -t, --track <branch>  branch(es) to track\n",
+            "    -m, --master <branch>\n",
+            "                          master branch\n",
+            "    --mirror[=(push|fetch)]\n",
+            "                          set up remote as a mirror to push to or fetch from\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "!git clone https://github.com/risnariha/Price-Prediction-DL.git\n",
+        "%cd Price-Prediction-DL"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D22PKuA3YkQn",
+        "outputId": "7ce6b825-ea6c-4828-d50d-18208118990a"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Price-Prediction-DL'...\n",
+            "fatal: protocol '/content/Price-Prediction-DL/https' is not supported\n",
+            "[Errno 2] No such file or directory: 'Price-Prediction-DL'\n",
+            "/content/Price-Prediction-DL\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git add HousingPrediction.ipynb"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z3aI0KYnY9yb",
+        "outputId": "daa994a0-5bf1-4197-b4ce-ce6c4aef0fbb"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: pathspec 'HousingPrediction.ipynb' did not match any files\n"
           ]
         }
       ]
