--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMY30YZoDaXWfSx1FMFWXme",
+      "authorship_tag": "ABX9TyMmwDZx+gBzZfLjoLnQXH4E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "id": "pa89XmTpUY0R",
         "outputId": "5f7e62ee-b505-4f2f-8e6e-47dcac02f01d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "0a80xc84UxDh"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
         "id": "aFd1Ur5TVBOc",
         "outputId": "770465a0-5804-4607-c2b2-3e3617877738"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "id": "3YJJlbXUX2lR",
         "outputId": "c2d8eb0e-5e12-4526-9c48-bb2b2ab93946"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
         "id": "tHTcZHlcX5YS",
         "outputId": "d679d509-3a31-4ef3-b9b1-bade60996be0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "id": "QloNsBIjYJDY",
         "outputId": "aa1b9e5a-c7d0-465f-8c71-4452e56b5dc0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
         "id": "D22PKuA3YkQn",
         "outputId": "7ce6b825-ea6c-4828-d50d-18208118990a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +230,7 @@
         "id": "Z3aI0KYnY9yb",
         "outputId": "daa994a0-5bf1-4197-b4ce-ce6c4aef0fbb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,6 +240,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "metadata": {
+        "id": "ZYd0IUsGZTct"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
