--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO31bHCTSCoJk97UVMgR5k8",
+      "authorship_tag": "ABX9TyNB7DoLWRXVKLyOr/WdgBMf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -241,16 +241,21 @@
       "metadata": {
         "id": "ZYd0IUsGZTct"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dataset = pd.read_csv(\"housing_data.csv\")\n",
+        "X = dataset.values[:,: -1]\n",
+        "Y = dataset.values[:,-1 :]\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X,Y, test_size=0.2,random_state=7)"
+      ],
       "metadata": {
         "id": "LcspdrIGZ6HL"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
