--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNB7DoLWRXVKLyOr/WdgBMf",
+      "authorship_tag": "ABX9TyNiwTTF/dIFWCGj9+NxMuqe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,6 +256,18 @@
         "id": "LcspdrIGZ6HL"
       },
       "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaler=StandardScaler()\n",
+        "X_train = scaler.fit_transform(X_train)"
+      ],
+      "metadata": {
+        "id": "-_fsp9VtwJjr"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
