Dense layer imported

--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiwTTF/dIFWCGj9+NxMuqe",
+      "authorship_tag": "ABX9TyMqUPAX6of7YveCXMi3IrDu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,12 +262,25 @@
       "cell_type": "code",
       "source": [
         "scaler=StandardScaler()\n",
-        "X_train = scaler.fit_transform(X_train)"
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test = scaler.fit_transform(X_test)"
       ],
       "metadata": {
         "id": "-_fsp9VtwJjr"
       },
-      "execution_count": 9,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense"
+      ],
+      "metadata": {
+        "id": "Z-hhR0_Mw8R3"
+      },
+      "execution_count": 12,
       "outputs": []
     }
   ]
