--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqUPAX6of7YveCXMi3IrDu",
+      "authorship_tag": "ABX9TyOoSO4P3jQqerapQv2A/9cV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,6 +282,32 @@
       },
       "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Sequential()\n",
+        "\n",
+        "model.add(Dense(units=32, input_shape=(X_train.shape[1],), activation=\"relu\"))"
+      ],
+      "metadata": {
+        "id": "ym-tgXdTx2Gp",
+        "outputId": "05fcd372-0a51-4a74-e84c-1bf89d9f2d2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/dense.py:93: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
     }
   ]
 }
