3rd layer added

--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoSO4P3jQqerapQv2A/9cV",
+      "authorship_tag": "ABX9TyNCl1EyLxlkptjKJiE4mLqv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -291,11 +291,11 @@
         "model.add(Dense(units=32, input_shape=(X_train.shape[1],), activation=\"relu\"))"
       ],
       "metadata": {
-        "id": "ym-tgXdTx2Gp",
-        "outputId": "05fcd372-0a51-4a74-e84c-1bf89d9f2d2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ym-tgXdTx2Gp",
+        "outputId": "05fcd372-0a51-4a74-e84c-1bf89d9f2d2c"
       },
       "execution_count": 13,
       "outputs": [
@@ -308,6 +308,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add (Dense(units=64, activation=\"relu\"))"
+      ],
+      "metadata": {
+        "id": "G7Ft-8sYzGNH"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add (Dense(units=1, activation=\"sigmoid\"))"
+      ],
+      "metadata": {
+        "id": "OK1sF5mpzk6K"
+      },
+      "execution_count": 17,
+      "outputs": []
     }
   ]
 }
