Adam optimizer added

--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBxES7JCP7q2F/Xiuk9BMR",
+      "authorship_tag": "ABX9TyPGxxL1/cdljy9OEaGc7pUs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,12 +337,12 @@
         "model.summary()"
       ],
       "metadata": {
-        "id": "Y1Y5YCaszvZ7",
-        "outputId": "660e74f0-b1ef-4ed3-fc09-0a8ed820dfd3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        }
+        },
+        "id": "Y1Y5YCaszvZ7",
+        "outputId": "660e74f0-b1ef-4ed3-fc09-0a8ed820dfd3"
       },
       "execution_count": 18,
       "outputs": [
@@ -428,6 +428,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.optimizers import Adam\n"
+      ],
+      "metadata": {
+        "id": "oAGFpbeK0Hmk"
+      },
+      "execution_count": 19,
+      "outputs": []
     }
   ]
 }
