Losses-binaryCrossentrophy added

--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGxxL1/cdljy9OEaGc7pUs",
+      "authorship_tag": "ABX9TyP9vY/1ULkuGR+w2Wv+YfjO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -432,12 +432,14 @@
     {
       "cell_type": "code",
       "source": [
-        "from tensorflow.keras.optimizers import Adam\n"
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.losses import BinaryCrossentropy\n",
+        "\n"
       ],
       "metadata": {
         "id": "oAGFpbeK0Hmk"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": []
     }
   ]
