--- a/HousingPrediction.ipynb
+++ b/HousingPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9vY/1ULkuGR+w2Wv+YfjO",
+      "authorship_tag": "ABX9TyMZ53+k5omeP3igoC3Y/a4j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -440,6 +440,18 @@
         "id": "oAGFpbeK0Hmk"
       },
       "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer= Adam(learning_rate=0.001)\n",
+        "model.compile(optimizer=optimizer, loss= BinaryCrossentropy(), metrics=[\"accuracy\"])"
+      ],
+      "metadata": {
+        "id": "hWDwry2f07zN"
+      },
+      "execution_count": 23,
       "outputs": []
     }
   ]
